--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -18,6 +18,9 @@
       <div class="links">
         <a href="{{ url_for('main.home') }}">Home</a>
         <a href="{{ url_for('main.upload') }}">Upload & Analyze</a>
+        <a href="{{ url_for('main.players') }}">Players</a>
+        <a href="{{ url_for('main.lineup') }}">Lineup</a>
+        <a href="{{ url_for('main.practice') }}">Practice</a>
         <a href="https://github.com/alecdaveynis" target="_blank" rel="noreferrer">GitHub</a>
       </div>
     </nav>
