--- a/app/templates/results.html
+++ b/app/templates/results.html
@@ -7,6 +7,7 @@
     {% if original_name %}<div>File: <strong>{{ original_name }}</strong></div>{% endif %}
     {% if jersey_number %}<div>Jersey #: <strong>{{ jersey_number }}</strong></div>{% endif %}
     {% if position %}<div>Role: <strong>{{ position }}</strong></div>{% endif %}
+    {% if analysis_mode %}<div>Mode: <strong>{{ analysis_mode }}</strong></div>{% endif %}
   </div>
 
   {% if notes %}
